--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto&family=Roboto+Mono&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Roboto+Mono&family=Roboto:wght@400;700&display=swap"
       rel="stylesheet"
     />
 
@@ -29,13 +29,13 @@
       <ul class="navbar-nav">
         <li class="nav-item">
           <a href="#" class="nav-link">
-            <span class="name-logo">Charles O'Hanlon</span>
+            <span>Charles O'Hanlon</span>
             <svg
               aria-hidden="true"
               focusable="false"
               data-prefix="fas"
               data-icon="angle-double-right"
-              class="svg-inline--fa fa-angle-double-right logo-arrow"
+              class="svg-inline--fa fa-angle-double-right"
               role="img"
               xmlns="http://www.w3.org/2000/svg"
               viewBox="0 0 448 512"
@@ -65,7 +65,7 @@
                 d="M528 32H48C21.5 32 0 53.5 0 80v352c0 26.5 21.5 48 48 48h480c26.5 0 48-21.5 48-48V80c0-26.5-21.5-48-48-48zm-352 96c35.3 0 64 28.7 64 64s-28.7 64-64 64-64-28.7-64-64 28.7-64 64-64zm112 236.8c0 10.6-10 19.2-22.4 19.2H86.4C74 384 64 375.4 64 364.8v-19.2c0-31.8 30.1-57.6 67.2-57.6h5c12.3 5.1 25.7 8 39.8 8s27.6-2.9 39.8-8h5c37.1 0 67.2 25.8 67.2 57.6v19.2zM512 312c0 4.4-3.6 8-8 8H360c-4.4 0-8-3.6-8-8v-16c0-4.4 3.6-8 8-8h144c4.4 0 8 3.6 8 8v16zm0-64c0 4.4-3.6 8-8 8H360c-4.4 0-8-3.6-8-8v-16c0-4.4 3.6-8 8-8h144c4.4 0 8 3.6 8 8v16zm0-64c0 4.4-3.6 8-8 8H360c-4.4 0-8-3.6-8-8v-16c0-4.4 3.6-8 8-8h144c4.4 0 8 3.6 8 8v16z"
               ></path>
             </svg>
-            <span class="link-text">About Me</span>
+            <span>About Me</span>
           </a>
         </li>
 
@@ -86,7 +86,28 @@
                 d="M384 320H256c-17.67 0-32 14.33-32 32v128c0 17.67 14.33 32 32 32h128c17.67 0 32-14.33 32-32V352c0-17.67-14.33-32-32-32zM192 32c0-17.67-14.33-32-32-32H32C14.33 0 0 14.33 0 32v128c0 17.67 14.33 32 32 32h95.72l73.16 128.04C211.98 300.98 232.4 288 256 288h.28L192 175.51V128h224V64H192V32zM608 0H480c-17.67 0-32 14.33-32 32v128c0 17.67 14.33 32 32 32h128c17.67 0 32-14.33 32-32V32c0-17.67-14.33-32-32-32z"
               ></path>
             </svg>
-            <span class="link-text">My Projects</span>
+            <span>My Projects</span>
+          </a>
+        </li>
+
+        <li class="nav-item">
+          <a href="#" class="nav-link">
+            <svg
+              aria-hidden="true"
+              focusable="false"
+              data-prefix="fas"
+              data-icon="file"
+              class="svg-inline--fa fa-file"
+              role="img"
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 384 512"
+            >
+              <path
+                fill="currentColor"
+                d="M256 0v128h128L256 0zM224 128L224 0H48C21.49 0 0 21.49 0 48v416C0 490.5 21.49 512 48 512h288c26.51 0 48-21.49 48-48V160h-127.1C238.3 160 224 145.7 224 128z"
+              ></path>
+            </svg>
+            <span>My Resume</span>
           </a>
         </li>
 
@@ -107,31 +128,43 @@
                 d="M502.3 190.8c3.9-3.1 9.7-.2 9.7 4.7V400c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V195.6c0-5 5.7-7.8 9.7-4.7 22.4 17.4 52.1 39.5 154.1 113.6 21.1 15.4 56.7 47.8 92.2 47.6 35.7.3 72-32.8 92.3-47.6 102-74.1 131.6-96.3 154-113.7zM256 320c23.2.4 56.6-29.2 73.4-41.4 132.7-96.3 142.8-104.7 173.4-128.7 5.8-4.5 9.2-11.5 9.2-18.9v-19c0-26.5-21.5-48-48-48H48C21.5 64 0 85.5 0 112v19c0 7.4 3.4 14.3 9.2 18.9 30.6 23.9 40.7 32.4 173.4 128.7 16.8 12.2 50.2 41.8 73.4 41.4z"
               ></path>
             </svg>
-            <span class="link-text">Contact Me</span>
+            <span>Contact Me</span>
           </a>
         </li>
       </ul>
     </nav>
 
     <main>
-      <h1>This is a Placeholder Title</h1>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Egestas erat
-        imperdiet sed euismod nisi porta lorem mollis. Sit amet mattis vulputate
-        enim nulla aliquet porttitor lacus luctus. Consequat semper viverra nam
-        libero justo laoreet sit amet. Leo vel orci porta non pulvinar neque
-        laoreet suspendisse. Commodo elit at imperdiet dui accumsan. Amet nulla
-        facilisi morbi tempus. Enim diam vulputate ut pharetra. Dignissim
-        convallis aenean et tortor at risus. Dignissim cras tincidunt lobortis
-        feugiat vivamus. Nec nam aliquam sem et tortor. Ac felis donec et odio
-        pellentesque diam. Pretium fusce id velit ut tortor pretium viverra
-        suspendisse potenti. Commodo quis imperdiet massa tincidunt nunc
-        pulvinar sapien. Porttitor massa id neque aliquam vestibulum morbi
-        blandit. Sodales neque sodales ut etiam sit amet nisl. Cras tincidunt
-        lobortis feugiat vivamus at augue. Dignissim convallis aenean et tortor.
-      </p>
-      
+      <section class="title-section">
+        <div class="title-header">
+          <h1>Hello World.</h1>
+          <hr />
+          <h1>
+            I'm <strong>Charles O'Hanlon</strong>, a budding web developer and
+            chocolate extraordinaire.
+          </h1>
+        </div>
+        <svg
+          aria-hidden="true"
+          focusable="false"
+          data-prefix="fas"
+          data-icon="chevron-down"
+          class="svg-inline--fa fa-chevron-down"
+          role="img"
+          xmlns="http://www.w3.org/2000/svg"
+          viewBox="0 0 448 512"
+        >
+          <path
+            fill="currentColor"
+            d="M224 416c-8.188 0-16.38-3.125-22.62-9.375l-192-192c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0L224 338.8l169.4-169.4c12.5-12.5 32.75-12.5 45.25 0s12.5 32.75 0 45.25l-192 192C240.4 412.9 232.2 416 224 416z"
+          ></path>
+        </svg>
+      </section>
+      <section class="about-section">
+        <h1>About Me</h1>
+      </section>
+      <section class="project-section"></section>
+      <section class="contact-section"></section>
     </main>
   </body>
 </html>
