update stylesheet and script directories

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- CSS stylesheet -->
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="../css/style.css" />
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -320,7 +320,7 @@
         </div>
       </section>
     </main>
-    <script src="../index.js" charset="utf-8"></script>
+    <script src="../js/index.js" charset="utf-8"></script>
   </body>
   <footer></footer>
 </html>
