update file directories

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- CSS stylesheet -->
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="/css/style.css" />
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -175,13 +175,13 @@
             </button>
             <div class="carousel-track">
               <img
-                src="./images/about/carousel1.jpeg"
+                src="/images/about/carousel1.jpeg"
                 alt=""
                 class="current-slide"
               />
-              <img src="./images/about/carousel2.jpeg" alt="" />
-              <img src="./images/about/carousel3.jpeg" alt="" />
-              <img src="./images/about/carousel4.jpeg" alt="" />
+              <img src="/images/about/carousel2.jpeg" alt="" />
+              <img src="/images/about/carousel3.jpeg" alt="" />
+              <img src="/images/about/carousel4.jpeg" alt="" />
             </div>
             <button class="carousel-button--right">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
@@ -212,7 +212,7 @@
           <h2>My Projects</h2>
           <div class="project-scroll">
             <div class="project-item v-centered">
-              <img src="./images/projects/TodoListAppPreview.png" alt="" />
+              <img src="/images/projects/TodoListAppPreview.png" alt="" />
               <div class="project-item-description">
                 <h3>Todo List Web App</h3>
                 <p>
@@ -238,7 +238,7 @@
               </div>
             </div>
             <div class="project-item v-centered">
-              <img src="./images/projects/PersonalSitePreview.png" alt="" />
+              <img src="/images/projects/PersonalSitePreview.png" alt="" />
               <div class="project-item-description">
                 <h3>Personal Website</h3>
                 <p>
@@ -264,7 +264,7 @@
               </div>
             </div>
             <div class="project-item v-centered">
-              <img src="./images/projects/ATCSPreview.png" alt="" />
+              <img src="/images/projects/ATCSPreview.png" alt="" />
               <div class="project-item-description">
                 <h3>Autonomous Trash Collection System (ATCS)</h3>
                 <p>
@@ -294,7 +294,7 @@
       <section id="resume-section" class="h-centered v-centered">
         <div class="resume-content">
           <h2>My Resume</h2>
-          <iframe src="./images/Charles O'Hanlon Public Resume.pdf"></iframe>
+          <iframe src="/images/Charles O'Hanlon Public Resume.pdf"></iframe>
         </div>
       </section>
       <section id="contact-section" class="h-centered v-centered">
@@ -320,7 +320,7 @@
         </div>
       </section>
     </main>
-    <script src="./js/index.js" charset="utf-8"></script>
+    <script src="/js/index.js" charset="utf-8"></script>
   </body>
   <footer></footer>
 </html>
